--- a/main.html
+++ b/main.html
@@ -9,7 +9,44 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+	</script>
+
+	<h1>Car Insurance Registration</h1>
+    <form method="post" action="process_registration.php">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+<!--         <fieldset> -->
+            <legend>Gender:</legend>
+            <input type="radio" id="gender_male" name="gender" value="Male" required>
+            <label for="gender_male">Male</label>
+
+            <input type="radio" id="gender_female" name="gender" value="Female" required>
+            <label for="gender_female">Female</label>
+<!--         </fieldset> -->
+        <br><br>
+
+        <label for="cars">Car Brand:</label>
+        <select id="cars" name="cars">
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedes">Mercedes</option>
+        </select><br><br>
+
+        <label for="carage">Car Age:</label>
+        <input type="number" id="carage" name="carage" required><br><br>
+
+        <label for="dop">Date of Purchase:</label>
+        <input type="date" id="dop" name="dop" required><br><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <button type="submit">Submit</button>
+    </form>
 
 </body>
 
